<resources>
    <string name="app_name">Stack Track</string>
    <string name="sell">Sell</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="delete_item">Delete item</string>
    <string name="save_changes">Save changes</string>
    <string name="unable_to_query_uri">Unable to query invalid uri:</string>
    <string name="item_added_with_id">Item added with id:</string>
    <string name="add_new_product">Add new product</string>
    <string name="delete_product_dialogue">Are you sure you want to delete this product?</string>
    <string name="dialogue_delete_button">DELETE</string>
    <string name="dialogue_cancel_button">CANCEL</string>
    <string name="dialog_discard_message">There are unsaved changes in the product. Do you wish to discard them?</string>
    <string name="dialog_discard_button">DISCARD</string>
    <string name="dialog_keep_editing_button">KEEP EDITING</string>
    <string name="order">order</string>
    <string name="product_picture">Product picture:</string>
    <string name="supplier_email">Supplier email:</string>
    <string name="supplier">Supplier:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="product_name">Product name:</string>
    <string name="order_product">Order product</string>
    <string name="dialog_delete_all_entries_message">You are about to delete ALL the items in the inventory. Do you wish to proceed?</string>
    <string name="search_hint">Search product</string>
    <string name="search">Search</string>
    <string name="empty_view_text">You have no items in inventory. Click the add items button to start populating your inventory.</string>
    <string name="item_successfully_added">Item successfully added</string>
    <string name="failed_to_add_item">Failed to add item</string>
    <string name="mail_body_new_batch">I require a new batch of </string>
    <string name="quantity_amount">Quantity: </string>
    <string name="cost_per_unit">Cost per unit: </string>
    <string name="product_deleted">Product deleted</string>
    <string name="failed_to_delete">Failed to delete product</string>
    <string name="product_must_have_name">Product must have a name, price, image, supplier and supplier email</string>
    <string name="product_updated">Product updated</string>
    <string name="product_update_failed">Product update failed</string>
    <string name="name_field_cannot_be_emtpy">Name field cannot be empty</string>
    <string name="price_field_cannot_be_empty">Price field cannot be empty or less than 0</string>
    <string name="supplier_field_cannot_be_empty">Supplier field cannot be empty</string>
    <string name="supplier_email_field_cannot_be_empty">Supplier email field cannot be empty</string>
    <string name="all_items_have_been_deleted">All items have been deleted</string>
    <string name="failed_to_delete_items">Failed to delete items</string>
    <string name="dummy_data_added">Dummy data added</string>
    <string name="adding_dummy_data_failed">Adding dummy data failed</string>
    <string name="there_are_no_items">There are no more items in stock</string>
    <string name="there_was_a_duplicate">There was a duplicate of this item, with the same name and price. Quantity updated.</string>
</resources>
